styles.css
body {
    margin: 0;
    background: #F3F2EE;
    overflow-x: hidden;
}

@font-face {
    font-family: "Fixel Display";
    src: url(./fonts/FixelText-Light.woff2);
    font-weight: 300;
}

@font-face {
    font-family: "Fixel Display";
    src: url(./fonts/FixelText-Regular.woff2);
    font-weight: 400;
}

@font-face {
    font-family: "Fixel Display";
    src: url(./fonts/FixelText-SemiBold.woff2);
    font-weight: 600;
}

/* header */

.header {
    padding: 64px 0  24px 5% ;
    display: flex;
    gap: 10%;
    align-items: center;
}

.header__logo {
    height: 30px;
}

.header__menu {
    color: #33321E80;
    display: flex;
    gap: 20px;
}
.header__menu-item {
    color: inherit;
    font-family: "Fixel Display";
    font-size: 15px;
    font-style: normal;
    font-weight: 300;
    line-height: normal;
    letter-spacing: 0.15px;
    text-decoration: none;
}
.header__mobile-menu{
    display: none;
}
.header__divider {
    color: rgba(51, 50, 30, 0.50);
    font-family: "Fixel Display";
    font-size: 15px;
    font-style: normal;
    font-weight: 300;
    line-height: normal;
    letter-spacing: 0.15px;
}
.header__burger {
    display: none;
}
.header__image-block {
    z-index: -3;
    position: absolute;
    object-fit: contain;
    top: -12vw;
    right: -2%;
    width: 40%;
    min-width: 500px;
}

.header__image {
    width: 100%;
}

/* hero */

.hero {
    padding: 50px 0 160px 5%;
}

.hero__text-block {
    width: 50%;
    display: flex;
    flex-direction: column;
}
.hero__title {
    color: #33321E;
    font-family: "Fixel Display";
    font-size: 66px;
    font-style: normal;
    font-weight: 600;
    line-height: 93%; /* 61.38px */
    letter-spacing: -1.32px;
    margin: 0;
}

.hero__subtitle {
    margin: 42px 0 0;
    width: 80%;
    color: #33321E;
    font-family: "Fixel Display";
    font-size: 18px;
    font-style: normal;
    font-weight: 400;
    line-height: normal;
    letter-spacing: 0.18px;
}

.hero__link {
    margin-top: 56px;
    padding: 12px 29px;
    width: 46%;
    background-color: #45694E;
    border-radius: 32.524px;
    color: #FFF;
    text-align: center;
    font-family: "Fixel Display";
    font-size: 24.167px;
    font-style: normal;
    font-weight: 600;
    line-height: normal;
    text-decoration: none;
    box-sizing: border-box;
}

/* features */

.features {
    background: #909E7A;
    border-radius: 20px;
    padding: 56px 15% 90px;
    position: relative;
}

.features__title {
    color: #FFF;
    text-align: center;
    font-family: "Fixel Display";
    font-size: 48px;
    font-style: normal;
    font-weight: 600;
    line-height: 106.256%; /* 51.003px */
    margin: 0;
}

.features__list {
    display: flex;
    flex-wrap: wrap;
    column-gap: 4%;
    row-gap: 32px;
    justify-content: center;
    list-style: none;
    padding: 0;
    margin: 44px 0 0;
}

.features__item {
    box-sizing: border-box;
    padding: 30px 32px;
    width: 48%;
    min-width: 330px;
    background-color: #fff;
    border-radius: 20px;
    object-fit: contain;
}

.features__item-header {
    display: flex;
    gap: 3%;
    align-items: center;
}

.features__item-icon {
    width: 9%;
}
.features__item-title {
    margin: 0;
    color: #33321E;
    font-family: "Fixel Display";
    font-size: 32px;
    font-style: normal;
    font-weight: 600;
    line-height: normal;
}
.features__item-descr {
    margin: 15px 0 0;
    color: #33321E;
    font-family: "Fixel Display";
    font-size: 18px;
    font-style: normal;
    font-weight: 400;
    line-height: normal;
}

.decorative-image-block {
    position: absolute;
    width: 10%;
    height: auto;
    object-fit: contain;
    right: 0;
    z-index: 5;
}

.decorative-image {
    rotate: 20deg;
    width: 280%;
}

/* steps */

.steps {
    padding: 90px 4% 98px;
}

.steps__title {
    margin: 0;
    width: 67%;
    color: #33321E;
    font-family: "Fixel Display";
    font-size: 48px;
    font-style: normal;
    font-weight: 600;
    line-height: normal;
}

.steps__content {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
}
.steps__text-block {
    width: 33%;
}

.steps__subtitle {
    margin: 0 0 22px;
    color: #45694E;
    font-family: "Fixel Display";
    font-size: 32px;
    font-style: normal;
    font-weight: 600;
    line-height: normal;
}

.steps__list {
    display: flex;
    flex-direction: column;
    gap: 12px;
    list-style: none;
    padding: 0;
    margin: 0;
}

.steps__video-block {
    width: 52%;
    object-fit: contain;
}
.steps__video {
    border-radius: 20px;
}
.steps__item {
    display: flex;
    align-items: center;
    width: 100%;
    box-sizing: border-box;
    padding: 10px 18px 10px 12px;
    background-color: #fff;
    border-radius: 20px;
    gap: 3%;
}

.steps__item-text {
    margin: 0;
    color: #33321E;
    font-family: "Fixel Display";
    font-size: 18px;
    font-style: normal;
    font-weight: 400;
    line-height: normal;
}

.steps__video {
    width: 100%;
}

.number-icon {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 40px;
    height: 40px;
    background-color: #3A5A40;
    border-radius: 50%;
    color: #FFF;
    font-family: "Fixel Display";
    font-size: 32px;
    font-style: normal;
    font-weight: 600;
    line-height: normal;
}

/* advantages */

.advantages {
    background-color: #EBE3DE;
    padding: 56px 16% 90px;
    border-radius: 20px;
}

.advantages__title {
    margin: 0 0 44px 0;
    color: #33321E;
    font-family: "Fixel Display";
    font-size: 48px;
    font-style: normal;
    font-weight: 600;
    line-height: normal;
    justify-self: center;
}

.advantages__list {
    list-style: none;
    margin: 0;
    padding: 0;
    display: flex;
    justify-content: space-between;
    row-gap: 32px;
    flex-wrap: wrap;
}
/* ... */

